- Created common modules - Fixed angular flex layout issues

--- a/src/app/materials/materials.component.scss
+++ b/src/app/materials/materials.component.scss
@@ -1,16 +1,8 @@
 main {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-
   .mat-toolbar {
-    display: flex;
     .mat-toolbar-row {
-
       > ul {
-        display: flex;
         padding-left: 20px;
-        flex-grow: 1;
       }
 
       .mat-button {
@@ -34,47 +26,41 @@ main {
 
   .material-cards {
     overflow: auto;
+    .material-card {
+      margin: 15px;
+      flex-basis: calc(25% - 30px);
+      box-sizing: border-box;
+      padding: 0 24px;
+      > img {
+        margin: 0 -24px 0 -24px;
+      }
 
-    .materials-card-wrapper {
-      display: flex;
-      flex-wrap: wrap;
-
-      .material-card {
-        margin: 15px;
-        flex-basis: calc(25% - 30px);
-        box-sizing: border-box;
-        padding: 0 24px;
-        > img {
-          margin: 0 -24px 0 -24px;
+      .mat-card-content {
+        position: relative;
+        margin: 0 -24px;
+        .id {
+          position: absolute;
+          top: -23px;
+          background: #FFFFFF;
+          padding: 4px 9px;
+          left: 0;
         }
 
-        .mat-card-content {
-          position: relative;
-          margin: 0 -24px;
-          .id {
-            position: absolute;
-            top: -23px;
-            background: #FFFFFF;
-            padding: 4px 9px;
-            left: 0;
+        .tags {
+          padding: 0 8px;
+          .tag {
+            background: #5dbf47;
+            display: inline-block;
+            padding: 2px 8px;
+            border-radius: 3px;
+            color: #FFFFFF;
+            margin: 2px 0;
           }
+        }
 
-          .tags {
-            padding: 0 8px;
-            .tag {
-              background: #5dbf47;
-              display: inline-block;
-              padding: 2px 8px;
-              border-radius: 3px;
-              color: #FFFFFF;
-              margin: 2px 0;
-            }
-          }
-
-          .name {
-            text-align: center;
-            padding: 15px 0;
-          }
+        .name {
+          text-align: center;
+          padding: 15px 0;
         }
       }
     }
